--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-.pkg.tar.zst filter=lfs diff=lfs merge=lfs -text
 *pkg.tar.zst filter=lfs diff=lfs merge=lfs -text
+*.pkg.tar.zst filter=lfs diff=lfs merge=lfs -text
